--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -14,7 +14,10 @@
   <div data-pagelet="sidebar">
   </div>
 
-  <div data-pagelet="documentation">
-  </div>
+  <section class="documentation" style="position: relative; left: 220px">
+    <article data-pagelet="bigpipe"></article>
+    <article data-pagelet="pagelet"></article>
+    <article data-pagelet="client"></article>
+  </section>
 </body>
 </html>
