--- a/pagelets/sidebar/css.styl
+++ b/pagelets/sidebar/css.styl
@@ -1,5 +1,6 @@
 .sidebar
   background: #FFF
+  border-right: 1px solid #BBB
   bottom: 0
   box-shadow: 0 0 20px #CCC
   box-sizing: border-box
@@ -13,3 +14,12 @@
   position: fixed
   top: 0
   width: 200px
+
+  ul
+    padding: 0
+    list-style: none
+
+  h3 small
+    font-size: 10px
+    font-weight: normal
+    font-style: italic
