[ux] Basic styling

--- a/code.styl
+++ b/code.styl
@@ -3,7 +3,6 @@
 //
 .rendermetable
   border-spacing: 0
-  border: 1px solid #DDD
   margin-bottom: 24px
   table-layout: fixed
   width: 100%
@@ -13,10 +12,9 @@
     padding: 0
 
   .linenos
-    background: #FAFAFA
-    border-right: 1px solid #DDD
-    color: #999
-    padding: 12px 0
+    border-right: 1px solid #EEE
+    color: #C0C8DA
+    padding: 20px 0
     text-align: right
     vertical-align: top
     -webkit-touch-callout: none
@@ -36,7 +34,7 @@
       background-color: transparent
 
   pre
-    background: #FFF
+    background: #FFF url('/resources/pentagon.png') repeat
     color: #444
     font-size: 15px
     line-height: 20px
