--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -9,12 +9,13 @@
   <meta name="robots" content="index,follow">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="/favicon.png">
+  <script type="text/javascript" src="//use.typekit.net/oqm8mot.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
-  <div data-pagelet="sidebar">
-  </div>
+  <div data-pagelet="sidebar"></div>
 
-  <section class="documentation" style="position: relative; left: 220px">
+  <section class="documentation" style="position: relative; padding-left: 300px">
     <article data-pagelet="bigpipe"></article>
     <article data-pagelet="pagelet"></article>
     <article data-pagelet="client"></article>
