--- a/pagelets/sidebar/css.styl
+++ b/pagelets/sidebar/css.styl
@@ -1,26 +1,50 @@
 .sidebar
   background: #FFF
-  border-right: 1px solid #BBB
   bottom: 0
-  box-shadow: 0 0 20px #CCC
   box-sizing: border-box
-  font-family: Helvetica Neue, Helvetica, Arial
+  color: #616B8C
+  font-family: "museo-sans",helvetica,arial,sans-serif
   font-size: 14px
   left: 0
   line-height: 22px
   overflow-x: hidden
   overflow-y: auto
-  padding: 30px 0 30px 30px
+  padding: 30px 0
   position: fixed
+  text-align: right
   top: 0
-  width: 200px
+  width: 270px
   z-index: 10
 
   ul
-    padding: 0
     list-style: none
+    padding: 0
 
-  h3 small
-    font-size: 10px
-    font-weight: normal
-    font-style: italic
+    li
+      border: 0
+      font-size: 15px
+      padding: 5px 0 5px 20px
+
+  h3
+    a
+      font-size: 30px
+      font-style: normal
+      color: #616B8C
+      font-weight: 100
+      padding: 12px 0 0 12px
+      text-transform: uppercase
+
+    small
+      color: #959BAE
+      margin-right: 10px
+
+  a
+    color: #9D8DFF
+    display: block
+    margin-right: 10px
+    padding-right: 5px
+    text-decoration: none
+
+    &:hover
+      color: #2FE7BE
+      transition: color .2s ease-in-out
