--- a/project.styl
+++ b/project.styl
@@ -9,8 +9,8 @@
 .markdown
   color: #444
   font-family: "proxima-nova-1", "proxima-nova-2", sans-serif;
-  font-size: 15px
-  line-height: 1.7
+  font-size: 18px
+  line-height: 32px
   position: relative
 
   .icon
@@ -25,11 +25,12 @@
       display: inline-block
 
   a
-    color: #4183C4
+    color: #9D8DFF
     text-decoration: none
 
     &:hover
-      text-decoration: underline
+      color: #2FE7BE
+      transition: color .2s ease-in-out
 
   h1,
   h2,
@@ -38,23 +39,29 @@
   h4,
   h5,
   h6
+    cursor: text
+    font-weight: 100
+    line-height: 1.7
     margin: 1em 0 15px
     padding: 0
-    font-weight: bold
-    line-height: 1.7
-    cursor: text
     position: relative
+    text-transform: uppercase
 
   h1
-    border-bottom: 1px solid #666
-    font-size: 2.5em
+    color: #616B8C
+    font-size: 60px
+    margin: 40px 0 20px
+    line-height: 70px
 
   h2
-    font-size: 2em
-    border-bottom: 1px solid #EEE
+    font-size: 40px
+    line-height: 45px
+    margin: 40px 0 20px
 
   h3
+    border-top: 1px solid #EEE
     font-size: 1.5em
+    padding: 30px 0
 
   h3[id]
     color: #444
