--- a/code.styl
+++ b/code.styl
@@ -17,6 +17,7 @@
     padding: 20px 0
     text-align: right
     vertical-align: top
+    width: 60px
     -webkit-touch-callout: none
     -webkit-user-select: none
     -khtml-user-select: none
@@ -44,6 +45,7 @@
 
   .code
     overflow-y: scroll
+    width: auto
     width: calc(100% - 50px)
 
     pre
