--- a/project.styl
+++ b/project.styl
@@ -62,9 +62,7 @@
     border-top: 1px solid #EEE
     font-size: 1.5em
     padding: 30px 0
-
-  h3[id]
-    color: #444
+    color: #959BAE
 
   h4
     font-size: 1.2em
