--- a/project.styl
+++ b/project.styl
@@ -42,26 +42,35 @@
     cursor: text
     font-weight: 100
     line-height: 1.7
-    margin: 1em 0 15px
-    padding: 0
+    margin: 1em 0 15px -20px
+    padding: 0 0 0 20px
     position: relative
     text-transform: uppercase
+
+    &:hover
+      a.anchor
+        position: relative
+
+        &:after
+          position: absolute
+          content: '#'
+          left: -20px
 
   h1
     color: #616B8C
     font-size: 60px
-    margin: 40px 0 20px
+    margin: 40px 0 20px -20px
     line-height: 70px
 
   h2
     font-size: 40px
     line-height: 45px
-    margin: 40px 0 20px
+    margin: 40px 0 20px -20px
 
   h3
     border-top: 1px solid #EEE
     font-size: 1.5em
-    padding: 30px 0
+    padding: 30px 0 0 20px
     color: #959BAE
 
   h4
