[ux] full width tables

--- a/project.styl
+++ b/project.styl
@@ -129,6 +129,7 @@
   table:not(.rendermetable)
     border-collapse: collapse
     border-spacing: 0
+    width: 100%
 
     tr
       background-color: #FFF
