--- a/code.styl
+++ b/code.styl
@@ -35,7 +35,7 @@
       background-color: transparent
 
   pre
-    background: #FFF url('/resources/pentagon.png') repeat
+    background: #FFF
     color: #444
     font-size: 15px
     line-height: 20px
