[minor] Add compiled HTML, faster deploy [minor] Added repo to sidebar

--- a/pagelets/sidebar/view.ejs
+++ b/pagelets/sidebar/view.ejs
@@ -1,4 +1,10 @@
 <aside class="sidebar">
+  <h2>BigPipe.io</h2>
+  <p class="what"> 
+    Check out the project on github:
+    <a href="https://github.com/bigpipe">github.com/bigpipe</a>
+  </p>
+
   <% 
     Object.keys(components).forEach(function each(name) { 
     project = components[name];
