--- a/pagelets/sidebar/css.styl
+++ b/pagelets/sidebar/css.styl
@@ -25,6 +25,20 @@
       font-size: 15px
       padding: 5px 0 5px 20px
 
+  .what
+    text-align: right
+
+    a
+      padding: 0
+
+  h2
+    font-size: 36px
+    font-style: normal
+    color: #444
+    font-weight: 100
+    padding: 12px 0 0 12px
+    text-transform: uppercase
+
   h3
     a
       font-size: 30px
